--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="sign_in">Sign In !</string>
     <string name="username">Username</string>
+
     <string name="password">Password</string>
     <string name="forget_password">Forget Password?</string>
     <string name="sign_in_button">Sign In</string>
@@ -30,4 +31,10 @@
     <string name="register_q">Register?</string>
     <string name="already_have_an_account">Already have an account, \t </string>
     <string name="sign_inq">Sign in?</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="english">English</string>
+    <string name="password_stars">*********</string>
+
+    <string name="language">Language</string>
 </resources>
